--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,17 +5,13 @@ main:
     conference_short: RCAR
     conference: IEEE International Conference on Real-time Computing and Robotics <strong>(RCAR)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/document/10249938
-    bibtex: https://bib.yliu.me/MICCAI23.txt
     image: ./assets/img/teaser_example_2.png
     notes: Oral Presentation
 
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+- title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
+    authors: <strong>Dayou Li</strong>; Pengkun Wei; Chenkun Zhao; Shuo Yang; Yibin Li; Wei Zhang*(*Corresponding authors)
+    conference_short: ICMA
+    conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
+    pdf: https://ieeexplore.ieee.org/abstract/document/10215742
+    image: ./assets/img/teaser_example_2.png
     notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
