--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,7 +5,7 @@ main:
     conference_short: RCAR
     conference: IEEE International Conference on Real-time Computing and Robotics <strong>(RCAR)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/document/10249938
-    image: ./assets/img/teaser_example_2.png
+    image: ./assets/img/rcar.png
     notes: Oral Presentation
 
 - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
@@ -13,5 +13,5 @@ main:
     conference_short: ICMA
     conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
-    image: ./assets/img/teaser_example_2.png
+    image: ./assets/img/icma.png
     notes: Oral Presentation
