--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -20,5 +20,5 @@ main:
       conference_short: ICMA
       conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
       pdf: https://ieeexplore.ieee.org/abstract/document/10215742
-      image: ./assets/img/icma.png
+      image: ./assets/img/icma2.png
       notes: Oral Presentation
