--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -14,5 +14,5 @@ main:
     conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
     image: ./assets/img/icma2.png
-    notes: [Oral Presentation](https://youtu.be/g6WrF-I7tNw)
+    notes: Oral Presentation
  
