--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -15,4 +15,5 @@ main:
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
     image: ./assets/img/icma2.png
     notes: Oral Presentation
+    demo: https://youtu.be/yb6lSQGGbz8
  
