--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 main:
 
   - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
-    authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding authors)
+    authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding author)
     conference_short: ICMA
     conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
@@ -10,7 +10,7 @@ main:
     demo: https://youtu.be/g6WrF-I7tNw
 
   - title: Multi-class 4-DoF Carton Box Detection for Heterogeneous Robotic Container Unloading
-    authors: Shuo Yang, <strong>Dayou Li</strong>, Chenkun Zhao, Pengkun Wei, Yibin Li, Wei Zhang* (*Corresponding authors)
+    authors: Shuo Yang, <strong>Dayou Li</strong>, Chenkun Zhao, Pengkun Wei, Yibin Li, Wei Zhang* (*Corresponding author)
     conference_short: RCAR
     conference: IEEE International Conference on Real-time Computing and Robotics <strong>(RCAR)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/document/10249938
