--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,12 +1,13 @@
 main:
-  - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
-      authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding author)
-      conference_short: ICMA
-      conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
+  
+  - title: MPGNet: Learning Move-Push-Grasping Synergy for Target-Oriented Grasping in Occluded Scenes
+      authors: <strong>Dayou Li</strong>, Chenkun Zhao, Shuo Yang, Ran Song, Xiaolei Li, Wei Zhang*(*Corresponding author)
+      conference_short: IROS
+      conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
       pdf: https://ieeexplore.ieee.org/abstract/document/10215742
       image: ./assets/img/icma2.png
-      notes: Oral Presentation
-      demo: https://youtu.be/g6WrF-I7tNw
+      # notes: Oral Presentation
+      demo: https://youtu.be/S_QKZqkh0w8
       
   - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
     authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding author)
