--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,22 @@
 main:
   
-  # - title: MPGNet: Learning Move-Push-Grasping Synergy for Target-Oriented Grasping in Occluded Scenes
-  #     authors: <strong>Dayou Li</strong>, Chenkun Zhao, Shuo Yang, Ran Song, Xiaolei Li, Wei Zhang*(*Corresponding author)
-  #     conference_short: IROS
-  #     conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
-  #     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
-  #     image: ./assets/img/icma2.png
-  #     # notes: Oral Presentation
-  #     demo: https://youtu.be/S_QKZqkh0w8
+  - title: MPGNet: Learning Move-Push-Grasping Synergy for Target-Oriented Grasping in Occluded Scenes
+    authors: <strong>Dayou Li</strong>, Chenkun Zhao, Shuo Yang, Ran Song, Xiaolei Li, Wei Zhang*(*Corresponding author)
+    conference_short: IROS
+    conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
+    pdf: https://ieeexplore.ieee.org/abstract/document/10215742
+    image: ./assets/img/icma2.png
+    # notes: Oral Presentation
+    demo: https://youtu.be/S_QKZqkh0w8
       
-  # - title: Coarse-to-Fine Detection of Multiple Seams for Robotic Welding
-  #     authors: Pengkun Wei, Shuo Cheng, <strong>Dayou Li</strong>, Ran Song, Yipeng Zhang, and Wei Zhang*(*Corresponding author)
-  #     conference_short: IROS
-  #     conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
-  #     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
-  #     image: ./assets/img/icma2.png
-  #     # notes: Oral Presentation
-  #     demo: https://youtu.be/pq162HSP2D4
+  - title: Coarse-to-Fine Detection of Multiple Seams for Robotic Welding
+    authors: Pengkun Wei, Shuo Cheng, <strong>Dayou Li</strong>, Ran Song, Yipeng Zhang, and Wei Zhang*(*Corresponding author)
+    conference_short: IROS
+    conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
+    pdf: https://ieeexplore.ieee.org/abstract/document/10215742
+    image: ./assets/img/icma2.png
+    # notes: Oral Presentation
+    demo: https://youtu.be/pq162HSP2D4
       
   - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
     authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding author)
@@ -24,7 +24,7 @@ main:
     conference: IEEE International Conference on Mechatronics and Automation <strong>(ICMA)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
     image: ./assets/img/icma2.png
-    notes: Oral Presentation
+    # notes: Oral Presentation
     demo: https://youtu.be/g6WrF-I7tNw
 
   - title: Multi-class 4-DoF Carton Box Detection for Heterogeneous Robotic Container Unloading
@@ -33,7 +33,7 @@ main:
     conference: IEEE International Conference on Real-time Computing and Robotics <strong>(RCAR)</strong>, 2023.
     pdf: https://ieeexplore.ieee.org/document/10249938
     image: ./assets/img/rcar.png
-    notes: Oral Presentation
+    # notes: Oral Presentation
     demo: https://youtu.be/nYvCbNoYi5Y
 
 
