--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@ main:
   #   image: ./assets/img/icma2.png
   #   # notes: Oral Presentation
   #   demo: https://youtu.be/pq162HSP2D4
-  - title: MPGNet/: Learning Move-Push-Grasping Synergy for Target-Oriented Grasping in Occluded Scenes
+  - title: 'MPGNet: Learning Move-Push-Grasping Synergy for Target-Oriented Grasping in Occluded Scenes'
     authors: <strong>Dayou Li</strong>, Chenkun Zhao, Shuo Yang, Ran Song, Xiaolei Li, Wei Zhang*(*Corresponding author)
     conference_short: IROS
     conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
