--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -27,13 +27,22 @@ main:
     demo: https://youtu.be/S_QKZqkh0w8
     
   - title: Coarse-to-Fine Detection of Multiple Seams for Robotic Welding
-    authors: Pengkun Wei, Shuo Cheng, <strong>Dayou Li</strong>, Ran Song, Yipeng Zhang, and Wei Zhang*(*Corresponding author)
+    authors: Pengkun Wei, Shuo Cheng, <strong>Dayou Li</strong>, Ran Song, Yipeng Zhang, Wei Zhang*(*Corresponding author)
     conference_short: IROS
     conference: IEEE/RSJ International Conference on Intelligent Robots and Systems <strong>(IROS)</strong>, 2024.
     pdf: https://ieeexplore.ieee.org/abstract/document/10215742
     image: ./assets/img/icma2.png
     # notes: Oral Presentation
     demo: https://youtu.be/pq162HSP2D4
+
+  - title: Learning Instruction-Guided Manipulation Affordance via Large Models for Embodied Robotic Tasks
+    authors: <strong>Dayou Li</strong>, Chenkun Zhao, Shuo Yang, Lin Ma, Yibin Li, Wei Zhang*(*Corresponding author)
+    conference_short: ICARM
+    conference: IEEE International Conference on Advanced Robotics and Mechatronics <strong>(ICARM)</strong>, 2024.
+    pdf: https://ieeexplore.ieee.org/abstract/document/10215742
+    image: ./assets/img/icma2.png
+    # notes: Oral Presentation
+    demo: https://youtu.be/tgQ_K1Yj2c0    
     
   - title: A Mobile Manipulation System for Automated Replenishment in the Field of Unmanned Retail
     authors: <strong>Dayou Li</strong>, Pengkun Wei, Chenkun Zhao, Shuo Yang, Yibin Li, Wei Zhang*(*Corresponding author)
