--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=8wV8cnEAAAAJ&hl=zh-CN
-cv_link: assets/files/dayou_li cv.pdf
+cv_link: assets/files/autoCV__1_(2).pdf
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
