--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Dayou Li
+title: Dayou(Edision) Li
 position: Master's Student
 affiliation: Shandong University
 email: lidayou.endeavour@gmail.com
