--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=8wV8cnEAAAAJ&hl=zh-CN
+linkedin: https://www.linkedin.com/in/dayou-li-231502319/
 cv_link: assets/files/dayou_cv.pdf
 
 # Images (e.g., your profile picture and your website's favicon) 
