--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
 title: Dayou(Edision) Li
-position: Master's Student
-affiliation: Shandong University
-email: lidayou.endeavour@gmail.com
+position: PhD Student
+affiliation: Texas A&M University
+email: dayou519@tamu.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
