--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Dayou(Edision) Li
+title: Dayou(Edison) Li
 position: PhD Student
 affiliation: Texas A&M University
 email: dayou519@tamu.edu
